CHANGELOG

When		Who		What
======================================================================================
2017-07-08	Richard Forth   Resolved #205 at least on Debian 9
				debian update check broken, requires python
				Addded a new preflight check to check for a
				python binary.
				Also adjusted the way to check what OS we are
				running as debian 9 now reports its distro in
				all lowercase.
2017-07-08	Richard Forth   Resolved #197 at least on Debian 9
				debian php.ini using cli not apache
				committed to staging for further testing
2017-07-08	Richard Forth   Closes #204, Debian 9 pidfile not found error.
2017-07-07	Richard Forth   Closes #201, a serious bug that invoked OOMKILLER when
				scanning very large log files.
2017-06-13	Richard Forth   Fixed uptime logic problem.
2017-06-13	Richard Forth   Added more verbosity.
2017-04-27	Richard Forth   Added more verbosity, fixed some typos.
2017-04-20	Richard Forth   Closes #184 , Modified PHP Fatal Error Check.
				- Now works on subfolders correctly
				- removes need for backticked grep
				- cleaner and more structured summaries rather
				than actual log output.
2017-04-20	Richard Forth   Closes #183 , Added skip checks for the following:
				--skip-maxclients
				--skip-php-fatal
				--skip-updates
				See --help for more information.
2017-04-04	Richard Forth   Added 'Red Hat Enterprise Linux Server' to new
				list of supported OSes. Fixes #179. Bug. 
2017-04-02	Richard Forth   Added code to detect older EOL OS versions and abort.
				Still in soft-fail at the moment.
2017-04-02	Richard Forth   Added code to detect EOL OS versions and abort.
				Still in soft-fail at the moment.
2017-04-02 	Richard Forth   Laid foundations for new OS detection using
				some embedded python, this actually reduces
				required code base by over 100 lines of code,
				missing OS verification checks now but will
				fix this in next update.
2017-03-28 	Richard Forth   Small bug fix.